[project]
name = "walberla-sweepgen"
description = "Metaprogramming utilities for walBerla"
authors = [
    {name = "Frederik Hennig", email = "frederik.hennig@fau.de"},
]
dependencies = [
    "pystencils>=2.0.dev0",
    "pystencilssfg>=0.1a4",
    "lbmpy",
    "py-cpuinfo>=9.0"
]
requires-python = ">=3.10"
license = { file = "COPYING.txt" }
dynamic = ["version"]

[build-system]
requires = [
    "setuptools>=69",
    "versioneer[toml]>=0.29",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["sweepgen", "sweepgen.*"]
namespaces = false

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/sweepgen/_version.py"
versionfile_build = "sweepgen/_version.py"
tag_prefix = "v"
parentdir_prefix = "walberla-sweepgen-"
