
include_directories( ${walberla_SOURCE_DIR}/src )
include_directories( ${walberla_BINARY_DIR}/src ) # for generated headers

add_subdirectory( blockforest )
add_subdirectory( boundary )
add_subdirectory( core )
add_subdirectory( gpu )
add_subdirectory( domain_decomposition )
add_subdirectory( executiontree )
add_subdirectory( fft )
add_subdirectory( field )
add_subdirectory( gather )
add_subdirectory( geometry )
add_subdirectory( gui )
add_subdirectory( lbm )
add_subdirectory( lbm_generated )
add_subdirectory( lbm_mesapd_coupling )
add_subdirectory( mesa_pd )
add_subdirectory( mesh )
add_subdirectory( pde )
add_subdirectory( pe )
add_subdirectory( pe_coupling )
add_subdirectory( postprocessing )
add_subdirectory( python_coupling )
add_subdirectory( simd )
add_subdirectory( stencil )
add_subdirectory( timeloop )
