add_subdirectory(basics)
if( WALBERLA_BUILD_LEGACY_LBM )
   add_subdirectory(lbm)
endif()
add_subdirectory(mesa_pd)
add_subdirectory(pde)
if( WALBERLA_BUILD_WITH_GPU_SUPPORT AND WALBERLA_BUILD_LEGACY_LBM )
    add_subdirectory(gpu)
endif()
if( WALBERLA_BUILD_WITH_CODEGEN AND WALBERLA_BUILD_LEGACY_LBM )
    add_subdirectory(codegen)
endif()