###################################################################################################
#
# Module fft 
#
###################################################################################################

add_library( fft )
target_link_libraries( fft PUBLIC core blockforest field )
target_sources( fft
      PRIVATE
      Fft.h
      Fft.cpp
      )

###################################################################################################
